# meeeters-nlweb

./: CLAUDE.md  Dockerfile  README.md  deploy_azure_webapp.sh  ruff.toml  startup.sh  startup_aiohttp.sh
.claude/: CLAUDE.md  CURRENT_STATE.md  setup-claude.md
.github/codeql/: codeql-config.yml
DataFinder/: ARCHITECTURE.md  DEMO_SCRIPT.md  DESIGN.md  FLOW.md  auto_record.sh  demo.py  generate_data.py  record.sh  record_demo.py  record_demo_auto.py  requirements.txt  simple_demo.py
ModelRouter/: LICENSE  README.md  nlweb_model_router_design.md  pyproject.toml  requirements.txt
ModelRouter/nlweb_router/: app.py
ModelRouter/nlweb_router/scripts/: analysis_server.py  analyze_multi_ref.py  analyze_openrouter.py  fetch_cheapest_models.py  json_utils.py  nanny_openrouter.py  retrieve_results.py  score_azure_oai.py  score_openrouter.py
config/: config_embedding.yaml  config_llm.yaml  config_nlweb.yaml  config_retrieval.yaml
demo/: README.md
docs/: nlweb-appsdk-adapter.md  nlweb-chatgpt-integration.md  nlweb-check-connectivity.md  nlweb-cli.md  nlweb-codingrules.md  nlweb-hello-world.md  nlweb-memory.md  nlweb-providers.md  nlweb-retrieval.md  setup-azure.md  setup-cloudflare-autorag.md  setup-docker.md  setup-elasticsearch.md  setup-github-oauth.md  setup-oauth.md  setup-snowflake.md  tools-database-load.md
openai-apps-sdk-integration/: pnpm-lock.yaml
scripts/: run_tests_with_server.py
static/: chat-interface-unified.js  chat-page-styles.css  chat-ui-common.js  conversation-renderer.js  index.html  nlweb-dropdown-chat.js  oauth-login.js
(+188 files in other folders)
